--- a/publication/mouchon-2023/cite.bib
+++ b/publication/mouchon-2023/cite.bib
@@ -4,7 +4,7 @@
  doi = {https://doi.org/10.1029/2022AV000848},
  journal = {AGU Advances},
  month = {June},
- title = {Subdaily Slow Fault Slip Dynamics Captured by Low-Frequency Earthquakes},
+ title = {Subdaily slow fault slip dynamics captured by low-frequency earthquakes},
  year = {2023}
 }
 
